--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "repository" : {
     "type" : "git",
     "url" : "https://github.com/criticalmanufacturing/training-simulator-erp.git"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
